tests/miniJava/neg/004883_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public int [] java ( int [] java , class java { public static void Main ( String [ ] java ) { { } } } java ) { return 0 ; } }
